--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -144,3 +144,6 @@ jhipster:
 # ===================================================================
 
 application:
+       # path.reports: resources/jasper/
+       commande:
+                datelimite: 2
