--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,7 @@
     "bootstrap-material-design": "0.5.10",
     "angular-xeditable": "^0.8.0",
     "angular-ui-select": "^0.19.8",
-    "font-awesome": "fontawesome#^4.7.0"
+    "font-awesome": "Font-Awesome#^4.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
