--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -23,7 +23,7 @@ spring:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:mysql://localhost:3306/GestC?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password:
+        password: ballack
         hikari:
             data-source-properties:
                 cachePrepStmts: true
@@ -44,6 +44,7 @@ spring:
         elasticsearch:
             cluster-name:
             cluster-nodes: localhost:9300
+
     mail:
         host: localhost
         port: 25
@@ -131,3 +132,5 @@ jhipster:
 # ===================================================================
 
 application:
+       commande:
+                datelimite: 2
